Advanced Training/4.multi-tenancy-policies/lab_manifests/4.1-app1-test.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-tenant1-icmp
spec:
  ingress:
  - action: Allow
    protocol: ICMP
  order: 10
  selector: tenant == "tenant1"
  tier: application
  types:
  - Ingress
